adding in construction class for pages in dev.

--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -65,7 +65,7 @@
                     <li><a href="index.html">Character Profiles Home</a> </li>
                     <li class="active"><a href="attichaos-archibald2.html">Attichaos Archibald</a></li>
                     <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
-                    <li><a href="#">Lytea[?]</a></li>
+                    <!--li><a href="#">Lytea[?]</a></li-->
                 </ul>
             </div>
   
