--- a/Huetopia/content/writing-preparation/character-profiles/index.html
+++ b/Huetopia/content/writing-preparation/character-profiles/index.html
@@ -61,13 +61,13 @@
             <li><a href="index.html">Character Profiles Home</a> </li>
             <li><a href="attichaos-archibald.html">Attichaos Archibald</a></li>
             <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
-            <li><a href="#">Lytea[?]</a></li>
+            <!--li><a href="#">Lytea[?]</a></li-->
         </ul>
     </div>
 
     <div class="col-s-9 col-m-6 center">
+        <h2>Character Profiles</h2>
         <div class="section">
-            <h2>Character Profiles</h2>
             <h3>Attichaos Archibald</h3>
             <div class="subsection">
                 <h4>Character Role</h4>
@@ -81,11 +81,16 @@
                 <p>I hope to have a book 2, that will focus in on his hero's journey.</p>
                 <p>While he is an <em>antagonist</em>, he isn't truly a villian, even if he looks like one.</p>
             </div>
+        </div>
+
+        <div class="section">
             <h3>Skylar Seacrest</h3>
-            <div class="section">
-                <!--TODO: Write out Skylar's section, and put the aside information here-->
+            <div class="construction">
+            <!--TODO: Write out Skylar's section, and put the aside information here-->
+            <p>This information is under construction</p>
             </div>
         </div>
+    </div>
 
     <div class="col-s-12 col-m-3 right">
         <div class="aside">
@@ -93,6 +98,7 @@
             <p>Enter a world full of bright colors and geometric geometries, where the politics of the past inform the leaders' decisions while oblivous to the ancient magic forces stirring.</p>
             <h2>Dramatic Question</h2>
             <p>Will a group of graduate students complete a quest to understand their history and make an informed decision about continuing to live in their previously invisible utopia?</p>
+            </div>
         </div>
     </div>
 </div>
