--- a/Huetopia/content/writing-preparation/character-profiles/index.html
+++ b/Huetopia/content/writing-preparation/character-profiles/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Huetopia: a novel">
     <meta name="author" content="Skylar Seacrest">
     <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
-    <title>Writing Prep Activities</title>
+    <title>Character Profiles</title>
     <link rel="stylesheet" href="../../../stylesheets/styles.css">
     <link rel="icon" href="../../../assets/images/map01_001_d.png">
 </head>
@@ -58,18 +58,37 @@
             <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
             <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
             <li><a href="../../../index.html">Huetopia Homepage</a> </li>
-            <li><a href="../idea-pitch.html">Idea Pitch</a></li>
-            <li><a href="../logline.html">Logline</a></li>
-            <li><a href="../dramatic-question.html">Dramatic Question</a> </li>
-            <li><a href="index.html">Character Profiles</a> </li>
+            <li><a href="index.html">Character Profiles Home</a> </li>
+            <li><a href="attichaos-archibald.html">Attichaos Archibald</a></li>
+            <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
+            <!--li><a href="#">Lytea[?]</a></li-->
         </ul>
     </div>
 
     <div class="col-s-9 col-m-6 center">
+        <h2>Character Profiles</h2>
         <div class="section">
-            <h2>Character Profiles</h2>
-            <p>This page is under construction</p>
-            <!--TODO: Upload the contents to the appropriate pages-->
+            <h3>Attichaos Archibald</h3>
+            <div class="subsection">
+                <h4>Character Role</h4>
+                <p>Attichaos Archibald takes the role of the mentor, kicking the <a href="#">protagonist</a> into going on an adventure.</p>
+                <p>He will follow the trope <a href="https://youtu.be/XXi8_1Pka1Y?t=271" target="_blank">"Secretly Evil Mentor"</a>, as he is actually really supportive, but is ulitmatiely working for the <a href="#">TriVerment</a> while the protagonists of this story are going to end up working in tandem with the <a href="#">Ancient Artists' Temple</a></p>
+            </div>
+            <div class="subsection">
+                <h4>Within Book One</h4>
+                <p>Witin the first book, the characters may almost see him as a classic mentor, but with better things to do.</p>
+                <p>He won't be in the story, solving the problems becasue this a thesis assignment, so he won't be very helpful. It's not like he is going on the trip with us.</p>
+                <p>I hope to have a book 2, that will focus in on his hero's journey.</p>
+                <p>While he is an <em>antagonist</em>, he isn't truly a villian, even if he looks like one.</p>
+            </div>
+        </div>
+
+        <div class="section">
+            <h3>Skylar Seacrest</h3>
+            <div class="construction">
+            <!--TODO: Write out Skylar's section, and put the aside information here-->
+            <p>This information is under construction</p>
+            </div>
         </div>
     </div>
 
@@ -79,6 +98,7 @@
             <p>Enter a world full of bright colors and geometric geometries, where the politics of the past inform the leaders' decisions while oblivous to the ancient magic forces stirring.</p>
             <h2>Dramatic Question</h2>
             <p>Will a group of graduate students complete a quest to understand their history and make an informed decision about continuing to live in their previously invisible utopia?</p>
+            </div>
         </div>
     </div>
 </div>
