Refactoring code so that Hutopia is the only public-facing page. (#32)

--- a/Huetopia/content/writing-preparation/character-profiles/index.html
+++ b/Huetopia/content/writing-preparation/character-profiles/index.html
@@ -8,24 +8,25 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Huetopia: a novel">
-    <meta name="author" content="Skylar Seacrest">
-    <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
-    <title>Character Profiles</title>
-    <link rel="stylesheet" href="../../../stylesheets/styles.css">
-    <link rel="icon" href="../../../assets/images/map01_001_d.png">
-</head>
-<body>
-<div class="row">
-    <div class="col-m-12 header">
-        <div class="col-m-4"></div>
-        <div class="col-m-4 title">
-            <h1>Huetopia</h1>
-            <p><span>A colorful continent within a magical world</span></p>
-        </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Huetopia: a novel">
+        <meta name="author" content="Skylar Seacrest">
+        <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
+        <title>Character Profiles</title>
+        <link rel="stylesheet" href="../../../../stylesheets/styles.css">
+        <link rel="icon" href="../../../assets/images/map01_001_d.png">
+    </head>
+
+    <body>
+        <div class="row">
+            <div class="col-xs-12 col-s-12 col-m-12 col-l-12 col-xl-12 header">
+            <div class="col-xs-1 col-m-4 col-l-4 col-xl-4 left spacer"></div>
+            <div class="col-xs-6 col-m-4 title">
+                <h1>Huetopia</h1>
+                <p><span>A colorful continent within a magical world</span></p>
+            </div>
         <div class="col-m-4"></div>
     </div>
 </div>
@@ -33,16 +34,16 @@
 <div class="row">
     <div class="col-xl-12 navbar xl-only">
         <ul>
-            <li class="col-xl-1"><a href="../../../../helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
+            <li class="col-xl-1"><a href="../../../../Archive/helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
             <li class="col-xl-1 dropdown">
                 <a class="dropdown-button" href="javascript:void(0)">Hello World Project Files</a>
                 <div class="dropdown-content">
-                    <a href="../../../../helloWorld/Project-Link.html">Project 1</a>
-                    <a href="../../../../helloWorld/Project-Link2.html">Project 2</a>
-                    <a href="../../../../helloWorld/Project-Link3.html">Project 3</a>
-                    <a href="../../../../helloWorld/Project-Link4.html">Project 4</a>
-                    <a href="../../../../helloWorld/Project-Link5.html">Project 5</a>
-                    <a href="../../../../helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
+                    <a href="../../../../Archive/helloWorld/Project-Link.html">Project 1</a>
+                    <a href="../../../../Archive/helloWorld/Project-Link2.html">Project 2</a>
+                    <a href="../../../../Archive/helloWorld/Project-Link3.html">Project 3</a>
+                    <a href="../../../../Archive/helloWorld/Project-Link4.html">Project 4</a>
+                    <a href="../../../../Archive/helloWorld/Project-Link5.html">Project 5</a>
+                    <a href="../../../../Archive/helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
                 </div>
             </li>
             <li class="col-xl-1"><a href="javascript:void(0)">Hello World Misc Files</a> </li>
@@ -57,7 +58,7 @@
         <ul class="nav-list">
             <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
             <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
-            <li><a href="../../../index.html">Huetopia Homepage</a> </li>
+            <li><a href="../../../../index.html">Huetopia Homepage</a> </li>
             <li><a href="index.html">Character Profiles Home</a> </li>
             <li><a href="attichaos-archibald.html">Attichaos Archibald</a></li>
             <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
@@ -101,7 +102,7 @@
             </div>
         </div>
     </div>
-</div>
+
 
 <div class="row">
     <div class="col-m-12 footer">
