--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -1,10 +1,10 @@
 <!--
-    ~ Copyright (c) 2022.  BraveGrumpy. 
-    ~ Do not reproduce contents without express written permission from the author.
-    ~ You can get permission by cloning the repository https://github.com/robin-zollner/bravegrumpy.website.git, and creating a new branch.
-    ~ Otherwise, you can email seacrestskylar@gmail.com, or join the discord server, linked within each page.
-    ~ The purpose of this website, is to practice responsive web design, and to publish creative writing.
--->
+  ~ Copyright (c) 2022.  BraveGrumpy.
+  ~ Do not reproduce contents without express written permission from the author.
+  ~ You can get permission by cloning the repository https://github.com/bravegrumpy/bravegrumpy.website, and creating a new branch.
+  ~ Otherwise, you can email code@bravegrumpy.com, or join the discord server, linked within each page.
+  ~ The purpose of this website, is to practice responsive web design, and to publish creative writing.
+  -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,7 +15,7 @@
         <meta name="author" content="Skylar Seacrest">
         <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
         <title>Character Profiles</title>
-        <link rel="stylesheet" href="../../../stylesheets/styles.css">
+        <link rel="stylesheet" href="../../../../stylesheets/styles.css">
         <link rel="icon" href="../../../assets/images/map01_001_d.png">
     </head>
     <body>
@@ -37,16 +37,16 @@
         <div class="row">
             <div class="col-xl-12 navbar xl-only">
                 <ul>
-                    <li class="col-xl-1"><a href="../../../../helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
+                    <li class="col-xl-1"><a href="../../../../Archive/helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
                     <li class="col-xl-1 dropdown">
                         <a class="dropdown-button" href="javascript:void(0)">Hello World Project Files</a>
                             <div class="dropdown-content">
-                                <a href="../../../../helloWorld/Project-Link.html">Project 1</a>
-                                <a href="../../../../helloWorld/Project-Link2.html">Project 2</a>
-                                <a href="../../../../helloWorld/Project-Link3.html">Project 3</a>
-                                <a href="../../../../helloWorld/Project-Link4.html">Project 4</a>
-                                <a href="../../../../helloWorld/Project-Link5.html">Project 5</a>
-                                <a href="../../../../helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
+                                <a href="../../../../Archive/helloWorld/Project-Link.html">Project 1</a>
+                                <a href="../../../../Archive/helloWorld/Project-Link2.html">Project 2</a>
+                                <a href="../../../../Archive/helloWorld/Project-Link3.html">Project 3</a>
+                                <a href="../../../../Archive/helloWorld/Project-Link4.html">Project 4</a>
+                                <a href="../../../../Archive/helloWorld/Project-Link5.html">Project 5</a>
+                                <a href="../../../../Archive/helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
                             </div>
                     </li>
                     <li class="col-xl-1"><a href="javascript:void(0)">Hello World Misc Files</a> </li>
@@ -61,9 +61,9 @@
                 <ul class="nav-list">
                     <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
                     <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
-                    <li><a href="../../../index.html">Huetopia Homepage</a> </li>
+                    <li><a href="../../../../index.html">Huetopia Homepage</a> </li>
                     <li><a href="index.html">Character Profiles Home</a> </li>
-                    <li class="active"><a href="attichaos-archibald2.html">Attichaos Archibald</a></li>
+                    <li class="active"><a href="attichaos-archibald.html">Attichaos Archibald</a></li>
                     <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
                     <!--li><a href="#">Lytea[?]</a></li-->
                 </ul>
@@ -215,14 +215,15 @@
   
         <div class="row">
             <div class="col-m-12 footer">
-            <div class="col-m-2 copyright">
-                <p>Copyright &copy 2022 BraveGrumpy&trade;</p>
+                <div class="col-m-2 copyright">
+                    <p>Copyright &copy 2022 BraveGrumpy&trade;</p>
+                </div>
+                <div class="col-m-3"></div>
+                <div class="col-m-2 contact-me">
+                    <p><a href="https:///discord.gg/nf9Uq7BwPn"><img alt= "join our discord in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
+                </div>
+                <div class="col-m-5"></div>
             </div>
-            <div class="col-m-3"></div>
-            <div class="col-m-2 contact-me">
-                <p><a href="https:///discord.gg/nf9Uq7BwPn"><img alt= "join our discord in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
-            </div>
-            <div class="col-m-5"></div>
         </div>
     </body>
   </html>
