--- a/Huetopia/content/writing-preparation/idea-pitch.html
+++ b/Huetopia/content/writing-preparation/idea-pitch.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Skylar Seacrest">
     <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
     <title>Writing Prep Activities</title>
-    <link rel="stylesheet" href="../../stylesheets/styles.css">
+    <link rel="stylesheet" href="../../../stylesheets/styles.css">
     <link rel="icon" href="../../assets/images/map01_001_d.png">
 </head>
 <body>
@@ -33,16 +33,16 @@
 <div class="row">
     <div class="col-xl-12 navbar xl-only">
         <ul>
-            <li class="col-xl-1"><a href="../../../helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
+            <li class="col-xl-1"><a href="../../../Archive/helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
             <li class="col-xl-1 dropdown">
                 <a class="dropdown-button" href="javascript:void(0)">Hello World Project Files</a>
                 <div class="dropdown-content">
-                    <a href="../../../helloWorld/Project-Link.html">Project 1</a>
-                    <a href="../../../helloWorld/Project-Link2.html">Project 2</a>
-                    <a href="../../../helloWorld/Project-Link3.html">Project 3</a>
-                    <a href="../../../helloWorld/Project-Link4.html">Project 4</a>
-                    <a href="../../../helloWorld/Project-Link5.html">Project 5</a>
-                    <a href="../../../helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
+                    <a href="../../../Archive/helloWorld/Project-Link.html">Project 1</a>
+                    <a href="../../../Archive/helloWorld/Project-Link2.html">Project 2</a>
+                    <a href="../../../Archive/helloWorld/Project-Link3.html">Project 3</a>
+                    <a href="../../../Archive/helloWorld/Project-Link4.html">Project 4</a>
+                    <a href="../../../Archive/helloWorld/Project-Link5.html">Project 5</a>
+                    <a href="../../../Archive/helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
                 </div>
             </li>
             <li class="col-xl-1"><a href="javascript:void(0)">Hello World Misc Files</a> </li>
@@ -57,7 +57,7 @@
         <ul class="nav-list">
             <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
             <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
-            <li><a href="../../index.html">Huetopia Homepage</a> </li>
+            <li><a href="../../../index.html">Huetopia Homepage</a> </li>
             <li><a href="idea-pitch.html">Idea Pitch</a></li>
             <li><a href="logline.html">Logline</a></li>
             <li><a href="dramatic-question.html">Dramatic Question</a> </li>
