--- a/index.html
+++ b/index.html
@@ -7,54 +7,93 @@
   -->
 
 <!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <title>BraveGrumpy.com</title>
-        <link rel="stylesheet" href="helloWorld/helloWorld_css.css">
-        <link rel="stylesheet" href="helloWorld/nav.css">
-        <script src="script.js"></script>
-        <link rel="icon" href="helloWorld/drawing.svg">
-    </head>
-    <body>
-    <nav>
-        <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="helloWorld/helloWorld_html.html">Hello World Main</a></li>
-            <li class="dropdown">
-                <a href="javascript:void(0)" class="dropdown-button">Project Links</a>
-                <div class="dropdown-content">
-                    <a href="helloWorld/Project-Link.html">Project 1</a>
-                    <a href="helloWorld/Project-Link2.html">Project 2</a>
-                    <a href="helloWorld/Project-Link3.html">Project 3</a>
-                    <a href="helloWorld/Project-Link4.html">Project 4</a>
-                    <a href="helloWorld/Project-Link5.html">Project 5</a>
-                    <a href="helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
-                </div>
-            </li>
-            <li class="dropdown">
-                <a href="javascript:void(0)" class="dropdown-button">Misc. Files</a>
-                <div class="dropdown-content">
-                    <a href="helloWorld/Form-Redirect1.html">Form Redirect 1</a>
-                    <a href="helloWorld/Form-Redirect2.html">Form Redirect 2</a>
-                    <a href="helloWorld/new-tab.html">new tab</a>
-                    <a href="err404.html">error404</a>
-                </div>
-            </li>
-            <li><a href="Huetopia/index.html">Creative Writing</a></li>
-        </ul>
-    </nav>
-        <div class="title" id="sec0">
-            <h1>BraveGrumpy</h1>
-        </div>
-        <div class="main">
-            <h2>Test Content</h2>
-            <div>
-                <p>Welcome to my website!</p>
-                <p> <img alt="placeholder image" src="https://via.placeholder.com/500x150.png/d1dcff/146414?text=Welcome+to+bravegrumpy.com"></p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Huetopia: a novel">
+    <meta name="author" content="Skylar Seacrest">
+    <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
+    <title>Huetopia Welcome Page</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="icon" href="Huetopia/assets/images/map01_001_d.png">
+</head>
+<body>
+    <div class="row">
+        <div class="col-m-12 header">
+            <div class="col-m-4"></div>
+            <div class="col-m-4 title">
+                <h1>Huetopia</h1>
+                <p><span>A colorful continent within a magical world</span></p>
             </div>
-            <div class="Hello_World">
-                <p> This is my <a href="helloWorld/helloWorld_html.html">Hello World</a> portfolio project.</p>
+            <div class="col-m-4"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xl-12 navbar xl-only">
+            <ul>
+                <li class="col-xl-1"><a href="Archive/helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
+                <li class="col-xl-1 dropdown">
+                    <a class="dropdown-button" href="javascript:void(0)">Hello World Project Files</a>
+                    <div class="dropdown-content">
+                        <a href="Archive/helloWorld/Project-Link.html">Project 1</a>
+                        <a href="Archive/helloWorld/Project-Link2.html">Project 2</a>
+                        <a href="Archive/helloWorld/Project-Link3.html">Project 3</a>
+                        <a href="Archive/helloWorld/Project-Link4.html">Project 4</a>
+                        <a href="Archive/helloWorld/Project-Link5.html">Project 5</a>
+                        <a href="Archive/helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
+                    </div>
+                </li>
+                <li class="col-xl-1"><a href="javascript:void(0)">Hello World Misc Files</a> </li>
+                <li class="col-xl-1"><a href="index.html">Creative Writing Home</a> </li>
+                <li class="col-xl-7"><br><br></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-s-3 col-m-3 menu">
+            <ul class="nav-list">
+                <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
+                <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
+                <li><a href="index.html">Huetopia Homepage</a> </li>
+                <li><a href="Huetopia/content/writing-preparation/idea-pitch.html">Idea Pitch</a></li>
+                <li><a href="Huetopia/content/writing-preparation/logline.html">Logline</a></li>
+                <li><a href="Huetopia/content/writing-preparation/dramatic-question.html">Dramatic Question</a> </li>
+                <li><a href="Huetopia/content/writing-preparation/character-profiles/index.html">Character Profiles</a> </li>
+            </ul>
+        </div>
+
+        <div class="col-s-9 col-m-6 center">
+            <div class="section">
+                <h2>Welcome to Huetopia</h2>
+                <p>Huetopia is a world that I have been building for some time.</p>
+                <p>This website is for chronicling my progress, as I follow the <a href="https://www.coursera.org/learn/write-your-first-novel/home/info" target="_blank">Writing your First Novel</a> course. It is taught by <a href="https://www.coursera.org/instructor/dwheeler">David Wheeler </a> and published by <a href="https://msu.edu/">Michigan State University</a> on <a href="http://www.coursera.org">Coursera</a> </p>
             </div>
         </div>
-    </body>
+
+        <div class="col-s-12 col-m-3 right">
+            <div class="aside">
+                <h2>Logline</h2>
+                <p>Enter a world full of bright colors and geometric geometries, where the politics of the past inform the leaders' decisions while oblivous to the ancient magic forces stirring.</p>
+                <h2>Dramatic Question</h2>
+                <p>Will a group of graduate students complete a quest to understand their history and make an informed decision about continuing to live in their previously invisible utopia?</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-m-12 footer">
+            <div class="col-m-2 copyright">
+                <p>Copyright &copy 2022 BraveGrumpy&trade;</p>
+            </div>
+            <div class="col-m-3"></div>
+            <div class="col-m-2 contact-me">
+                <p><a href="https:///discord.gg/nf9Uq7BwPn"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
+            </div>
+            <div class="col-m-5"></div>
+        </div>
+    </div>
+</body>
 </html>
