--- a/index.html
+++ b/index.html
@@ -31,37 +31,18 @@
     </div>
 
     <div class="row">
-        <div class="col-xl-12 navbar xl-only">
-            <ul>
-                <li class="col-xl-1"><a href="Archive/helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
-                <li class="col-xl-1 dropdown">
-                    <a class="dropdown-button" href="javascript:void(0)">Hello World Project Files</a>
-                    <div class="dropdown-content">
-                        <a href="Archive/helloWorld/Project-Link.html">Project 1</a>
-                        <a href="Archive/helloWorld/Project-Link2.html">Project 2</a>
-                        <a href="Archive/helloWorld/Project-Link3.html">Project 3</a>
-                        <a href="Archive/helloWorld/Project-Link4.html">Project 4</a>
-                        <a href="Archive/helloWorld/Project-Link5.html">Project 5</a>
-                        <a href="Archive/helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
-                    </div>
-                </li>
-                <li class="col-xl-1"><a href="javascript:void(0)">Hello World Misc Files</a> </li>
-                <li class="col-xl-1"><a href="index.html">Creative Writing Home</a> </li>
-                <li class="col-xl-7"><br><br></li>
-            </ul>
+        <div class="navbar">
+
         </div>
     </div>
 
     <div class="row">
         <div class="col-s-3 col-m-3 menu">
             <ul class="nav-list">
-                <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
-                <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
-                <li><a href="index.html">Huetopia Homepage</a> </li>
-                <li><a href="Huetopia/content/writing-preparation/idea-pitch.html">Idea Pitch</a></li>
-                <li><a href="Huetopia/content/writing-preparation/logline.html">Logline</a></li>
-                <li><a href="Huetopia/content/writing-preparation/dramatic-question.html">Dramatic Question</a> </li>
-                <li><a href="Huetopia/content/writing-preparation/character-profiles/index.html">Character Profiles</a> </li>
+                <li class="active"><a href="index.html">Huetopia Homepage</a></li>
+                <li class="spoilers"><a href="Huetopia/content/writing-preparation/index.html">Writing Prep (spoilers)</a></li>
+                <li><a href="Huetopia/content/chapter-outlines/index.html">Chapter Outlines</a></li>
+                <li><a href="Huetopia/content/chapters/index.html">Chapters Written so far</a></li>
             </ul>
         </div>
 
