--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <meta name="description" content="Huetopia: a novel">
         <meta name="author" content="Skylar Seacrest">
-        <meta name="keywords" content="Fantasy, Sci-Fi, World-building, nove., fiction, Huetopia, creative writing, Coursera">
+        <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
+
         <title>Huetopia Homepage</title>
         <link rel="stylesheet" href="stylesheets/styles.css">
         <link rel="icon" href="assets/images/BG_logo.png">
@@ -56,12 +57,16 @@
                 <div class="col-m-4 copyright">
                     <p>Copyright &copy; <!--img src="assets/images/BraveGrumpyRectangle.svg"--> BraveGrumpy &trade; </p>
                 </div>
-                <!--div class="col-m-2"></div-->
                 <div class="col-m-4 contact-me">
-                    <p><a href=""><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"</a></p>
+                    <div class="col-s-4"></div>
+                    <div class="col-s-4">
+                        <p>
+                            <a href=""><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
+                        </p>
+                    </div>
+                    <div class="col-s-4"></div>
                 </div>
                 <div class="col-m-4"></div>
-                <!--div class="col-m-2"><img src="assets/images/BraveGrumpySquare.svg"></div-->
             </div>
         </div>
     </body>
