--- a/work-by-week/index.html
+++ b/work-by-week/index.html
@@ -7,7 +7,6 @@
         <title>Coursera Week by Week</title>
         <link rel="stylesheet" href="../stylesheets/styles.css">
         <link rel="icon" href="../assets/images/map01_001_d.png">
-
     </head>
     <body>
         <div class="row">
@@ -24,42 +23,60 @@
                     <li class="col-s-1"><a href="#week-1">Week One</a></li>
                     <li class="col-s-1"><a href="#week-2">Week Two</a></li>
                     <li class="col-s-1"><a href="#week-3">Week Three</a></li>
+                    <!--li class="col-s-1"><a href="#week-4">Week Four</a></li>
+                    <li class="col-s-1"><a href="#week-5">Week Five</a></li>
+                    <li class="col-s-1"><a href="#week-6">Week Six</a></li>
+                    <li class="col-s-1"><a href="#week-7">Week Seven</a></li>
+                    <li class="col-s-1"><a href="#week-8">Week Eight</a></li>
+                    <li class="col-s-1"><a href="#week-9">Week Nine</a></li>
+                    <li class="col-s-1"><a href="#week-10">Week Ten</a></li>
+                    <li class="col-s-1"><a href="#week-11">Week Eleven</a></li>
+                    <li class="col-s-1"><a href="#week-12">Week Twelve</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirteen</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Fourteen</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Fifteen</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Sixteen</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Seventeen</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Eighteen</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Ninteen</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty One</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty Two</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty Three</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty Four</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty Five</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty Six</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty Seven</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty Eight</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Twenty Nine</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty One</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty Two</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty Three</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty Four</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty Five</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty Six</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty Seven</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty Eight</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Thirty Nine</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Fourty</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Fourty One</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Fourty Two</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Fourty Three</a></li>
+                    <li class="col-s-1"><a href="#week-x">Week Fourty Four</a></li-->
                 </ul>
             </div>
         </div>
-                <ul>
-                    <!--li><a href="#week-1">Week 1</a></li>
-                    <li><a href="#week-2">Week 2</a></li>
-                    <li><a href="#week-3">Week 3</a></li>
-                    <li><a href="#">Week 4</a></li>
-                    <li><a href="#">Week 5</a></li>
-                    <li><a href="#">Week 6</a></li>
-                    <li><a href="#">Week 7</a></li>
-                    <li><a href="#">Week 8</a></li>
-                    <li><a href="#">Week 9</a></li>
-                    <li><a href="#">Week 10</a></li>
-                    <li><a href="#">Week 11</a></li>
-                    <li><a href="#">Week 12</a></li>
-                    <li><a href="#">Week 13</a></li>
-                    <li><a href="#">Week 14</a></li>
-                    <li><a href="#">Week 15</a></li>
-                    <li><a href="#">Week 16</a></li>
-                    <li><a href="#">Week 17</a></li>
-                    <li><a href="#">Week 18</a></li>
-                    <li><a href="#">Week 19</a></li>
-                    <li><a href="#">Week 20</a></li>
-                    <li><a href="#">Week 22</a></li>
-                    <li><a href="#">Week 23</a></li>
-                    <li><a href="#">Week 24</a></li>
-                    <li><a href="#">Week 25</a></li>
-                    <li><a href="#">Week 26</a></li>
-                    <li><a href="#">Week 27</a></li>
-                    <li><a href="#">Week 28</a></li>
-                    <li><a href="#">Week 29</a></li>
-                    <li><a href="#">Week 30</a></li>
-                    <li><a href="#">Week 31</a></li>
-                    <li><a href="#">Week 32</a></li-->
-                </ul>
+        
+        <div class="row">
+            <div class="col-s-3 col-m-3 menu">
+                <div class="nav-list">
+                    <ul>
+                        <li><a href="../index.html">Huetopa Homepage</a></li>
+                        <li class="active"><a href="index.html">Coursera Work by Week</a></li>
+                        <li><a href="../content/chapters/index.html">Read Now</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="col-s-9 col-m-6 center">
                 <div class="section" id="intro">
@@ -337,7 +354,7 @@
                         <p>Sam was unsure of whether her vibration was just from the excitement, or from the fact that Lytea had upped the green saturation of her drink a little more than she should have.  Sam took a sip from Lytea’s cup to investigate.  Lytea’s competitive nature, and proclivity for impulsive decisions made her susceptible to keeping up with Sam in green saturation, but because she didn’t like the flavor that blue adds to the coffee-esque beverage she never used it, missing out on the calming and balancing benefits of blue gave.</p>
                         <p>Lytea was lucky that Sam was holding the hot beverage at the moment, as Lytea would have spilled it otherwise. With the direction that this conversation was goin, Sam was glad to have the ability to ration Lytea’s access to the stimulant.</p>
                         <p>“Why would he assume we would study new color-magic?” questioned Sam, with an edge of suspicion creeping into his voice. Sam did his best to limit aggression until he knew for certain that there wasn’t an alternative explanation for why he received an acceptance letter to study color-magic at a school he never applied to go to, and certainly could never afford.</p>
-                        <p>“I talked about the tree,” Lytea said flippantly. She knew that she needed to tell Sam about this, but she often forgot how seriously he took colors and nature.  She kept forgetting that there was a time before color resources were easily obtainable using the BrightLight. To her, obviously everybody needed color to live, but BrightLight and its various competitors provided tablets, making many colors available at the touch of a button, making dye, brushes and runes functionally irrelevant. Lytea’s drive to impress Ceil was overtook her loyalty to the Willow, in a moment of weakness, even though it was the most peaceful place she had ever experienced.  Its not like she wanted to destroy her childhood sanctuary, but if she was going to move, it would be hard for to make the case to Ceil why it mattered.  Lytea aslo balked at the fact that she would eventally have to ask her sibling, Puice, the youngest to receive land inheritance<sup><a href="#en18">18</a></sup>, for the same favors if the tree survived Ceil.</p>
+                        <p>“I talked about the tree,” Lytea said flippantly. She knew that she needed to tell Sam about this, but she often forgot how seriously he took colors and nature.  She kept forgetting that there was a time before color resources were easily obtainable using the BrightLight. To her, obviously everybody needed color to live, but BrightLight and its various competitors provided tablets, making many colors available at the touch of a button, making dye, brushes and runes functionally irrelevant. Lytea’s drive to impress Ceil was overtook her loyalty to the Willow, in a moment of weakness, even though it was the most peaceful place she had ever experienced.  Its not like she wanted to destroy her childhood sanctuary, but if she was going to move, it would be hard for to make the case to Ceil why it mattered.  Lytea aslo balked at the fact that she would eventally have to ask her sibling, Puice, the youngest to receive land inheritance<sup id="ref18"><a href="#en18">18</a></sup>, for the same favors if the tree survived Ceil.</p>
                         <p>“You told him what?” Sam asked in a measured tone. With his stomach lurching, Sam stopped walking along the path, and rooted himself to where he stood, with a well-practiced assertive calm, in direct contrast to Lytea’s ecstatic chitter. Despite having his theories about what happened, Sam did not want to believe the words Lytea were saying. He wanted to believe her tone even less. Sam displayed his shock and dissappointment by adopting a clenched jaw and steely stare.  Sam was acutely aware that they were still a ten minue walk from the Willow, and that they had just passed Chair Rock two minutes back making sitting down poor option. Of course Lytea would wait until the worst possible moment to blasély drop a bombshell.</p>
                         <p>Sam’s lack of movement and subsequent stern expression grabbed Lytea’s attention.  She had only seen it once, when a TriVerment official was testing Sam’s loyalty to the Artist Collective Religion, and Sam managed to pass with flying colors, despite his true loyalties.</p>
                         <p>“About the Willow,” Lytea paused, fully turning back to look Sam directly in the eye, using muscle memory to expertly land her feet on the two green-moss covered jet-stream rocks, straddling a dangerous burgandy mud-patch“We are headed there,” she said stating the obvious, “The only reason why Ceil didn’t have it taken down was becasue I was adamantly sentimental, and there was plenty of other raw land to rent. Plus, he listens Cos for some reason.”</p>
@@ -417,16 +434,19 @@
 
         <div class="row">
             <div class="col-m-12 footer">
-                <div class="col-m-2 copyright">
-
+                <div class="col-m-4 copyright">
                     <p>Copyright &copy; 2022 BraveGrumpy&trade;</p>
-
                 </div>
-                <div class="col-m-3"></div>
-                <div class="col-m-2 contact-me">
-                    <p><a href="https:///discord.gg/nf9Uq7BwPn"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
+                <div class="col-m-4 contact-me">
+                    <div class="col-s-4"></div>
+                    <div class="col-s-4">
+                        <p>
+                            <a href="https:///discord.gg/nf9Uq7BwPn"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
+                        </p>
+                    </div>
+                    <div class="col-s-4"></div>
                 </div>
-                <div class="col-m-5"></div>
+                <div class="col-m-4"></div>
             </div>
         </div>
     </body>
