Adding footer to new homepage

--- a/index.html
+++ b/index.html
@@ -43,5 +43,28 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-s-12 footer">
+                <div class="col-m-4 copyright">
+                    <p>Copyright &copy; <img class="col-s-4 col-m-4 col-l-4" src="assets/images/BraveGrumpyRectange_color_typed.png"> BraveGrumpy &trade; </p>
+                </div>
+                <div class="col-m-4 contact-me">
+                    <div class="col-s-4"></div>
+                    <div class="col-s-4">
+                        <p>
+                            <a href="#"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
+                        </p>
+                    </div>
+                    <div class="col-s-4"></div>
+                </div>
+                <div class="col-m-4"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-s-12">
+                <div class="col-m-4 col-l-4 col-xl-4">
+                </div>
+            </div> 
+        </div>
     </body>
 </html>
