Completing new index.html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                     </ul>
                 </div>
             </div>
+            <div class="col-s-9 col-m-6">
+                <div class="section">
+                    <h2>Click a link to view content.</h2>
+                    <p>This is the home page. The links to the left exist as a combination of all links on the page, and so that I can expand beyond just the Hutopia part of this site.</p>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-s-12 footer">
@@ -52,10 +58,14 @@
                     <div class="col-s-4"></div>
                     <div class="col-s-4">
                         <p>
-                            <a href="#"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
+                            <a href="https://discord.gg/ZfMntbk5U4"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
                         </p>
                     </div>
-                    <div class="col-s-4"></div>
+                    <div class="col-s-4">
+                        <p>
+                            <a href="mailto:info@bravegrumpy.com"><img src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
+                        </p>
+                    </div>
                 </div>
                 <div class="col-m-4"></div>
             </div>
