fixing email size

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-s-4">
                         <p>
-                            <a href="mailto:info@bravegrumpy.com"><img src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
+                            <a href="mailto:info@bravegrumpy.com"><img class="col-s-3 col-m-3 col-l-6" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
                         </p>
                     </div>
                 </div>
