--- a/link-repository.html
+++ b/link-repository.html
@@ -15,8 +15,8 @@
             <div class="col-s-12 col-m-12 col-l-12 header">
                 <div class="col-m-4"></div>
                 <div class="col-m-4 title">
-                    <h1>Brave Grumpy Home Page</h1>
-                    <p><span class="subtitle">Welcome to the Brave Grumpy homepage. Click on the links to explore content.</span></p>
+                    <h1>Informational Links</h1>
+                    <p><span class="subtitle">This is a place for me to store helpful links. They are sorted by relelvant use-case.</span></p>
                 </div>
             </div>
         </div>
@@ -25,7 +25,7 @@
                 <div class="nav-list">
                     <ul>
                         <li>
-                            <a href="index.html" class="active">Brave Grumpy Homepage</a>
+                            <a href="index.html">Brave Grumpy Homepage</a>
                         </li>
                         <li>
                             <a href="writing.html">Huetopia Homepage</a>
@@ -34,7 +34,7 @@
                             <a href="#">Art Portfolio</a>
                         </li>
                         <li>
-                            <a href="link-repository.html">Helpful Link Repository</a>
+                            <a href="#" class="active">Helpful Link Repository</a>
                         </li>
                         <li>
                             <a href="archive/index.html">Old, Experimental homepage</a>
@@ -44,8 +44,34 @@
             </div>
             <div class="col-s-9 col-m-6">
                 <div class="section">
-                    <h2>Click a link to view content.</h2>
-                    <p>This is the home page. The links to the left exist as a combination of all links on the page, and so that I can expand beyond just the Hutopia part of this site.</p>
+                    <h2>Blender</h2>
+                    <div class="section">
+                        <h3>Procedural Material Development</h3>
+                        <div class="section">
+                            <h4>Lists of IOR values</h4>
+                            <div class="menu">
+                                <div class="nav-list">
+                                    <ul>
+                                        <li>
+                                            <a href="https://pixelandpoly.com/ior.html">Pixel and Poly</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://forums.cgsociety.org/t/a-complete-ior-list/1070401">CGTalk</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://en.wikipedia.org/wiki/List_of_refractive_indices">Wikipedia</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://blendersauce.com/ior-list/">Blendersauce</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://refractiveindex.info/">RefractiveIndex.INFO</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
