fixing height on images in footer.

--- a/link-repository.html
+++ b/link-repository.html
@@ -78,18 +78,18 @@
         <div class="row">
             <div class="col-s-12 footer">
                 <div class="col-m-4 copyright">
-                    <p>Copyright &copy; <img class="col-s-4 col-m-4 col-l-6" src="assets/images/BraveGrumpyRectange_color_typed.png"> BraveGrumpy &trade; </p>
+                    <p>Copyright &copy; <img height="30em" src="assets/images/BraveGrumpyRectange_color_typed.png"> BraveGrumpy &trade; </p>
                 </div>
                 <div class="col-m-4 contact-me">
                     <div class="col-s-4"></div>
                     <div class="col-s-4">
                         <p>
-                            <a href="https://discord.gg/ZfMntbk5U4"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
+                            <a href="https://discord.gg/ZfMntbk5U4"><img height="30em" alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
                         </p>
                     </div>
                     <div class="col-s-4">
                         <p>
-                            <a href="mailto:info@bravegrumpy.com"><img class="col-s-3 col-m-3 col-l-4" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
+                            <a href="mailto:info@bravegrumpy.com"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
                         </p>
                     </div>
                 </div>
