moving email me.

--- a/link-repository.html
+++ b/link-repository.html
@@ -88,12 +88,13 @@
                         </p>
                     </div>
                     <div class="col-s-4">
-                        <p>
-                            <a href="mailto:info@bravegrumpy.com"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
-                        </p>
                     </div>
                 </div>
-                <div class="col-m-4"></div>
+                <div class="col-m-4 contact-me">
+                    <p>
+                        <a href="mailto:info@bravegrumpy.com"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
+                    </p>
+                </div>
             </div>
         </div>
         <div class="row">
