iterating on footer.

--- a/link-repository.html
+++ b/link-repository.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-s-12 footer">
                 <div class="col-m-4 copyright">
-                    <p>Copyright &copy; <img height="30em" src="assets/images/BraveGrumpyRectange_color_typed.png"> BraveGrumpy &trade; </p>
+                    <p>Copyright &copy; <img src="assets/images/BraveGrumpyRectange_color_typed.png"> &trade; </p>
                 </div>
                 <div class="col-m-4 contact-me">
                     <div class="col-s-4"></div>
@@ -87,13 +87,16 @@
                             <a href="https://discord.gg/ZfMntbk5U4"><img height="30em" alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
                         </p>
                     </div>
-                    <div class="col-s-4">
-                    </div>
+                    <div class="col-s-4"></div>
                 </div>
-                <div class="col-m-4 contact-me">
-                    <p>
-                        <a href="mailto:info@bravegrumpy.com"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
-                    </p>
+                <div class="col-m-4 email">
+                    <div class="col-s-4"></div>
+                    <div class="col-s-4">
+                        <p>
+                            <a href="mailto:info@bravegrumpy.com"><img src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
+                        </p>
+                    </div>
+                    <div class="col-s-4"></div>
                 </div>
             </div>
         </div>
