making email smaller.

--- a/link-repository.html
+++ b/link-repository.html
@@ -96,7 +96,7 @@
                     <div class="col-s-4"></div>
                     <div class="col-s-4">
                         <p>
-                            <a href="mailto:info@bravegrumpy.com"><img src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
+                            <a href="mailto:info@bravegrumpy.com"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
                         </p>
                     </div>
                     <div class="col-s-4"></div>
