--- a/link-repository.html
+++ b/link-repository.html
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="col-s-12 footer">
                 <div class="col-m-4 copyright">
-                    <p>Copyright &copy; <img src="assets/images/BraveGrumpyRectange_color_typed.png"> &trade; </p>
+                    <p>Copyright &copy; <img height="30em"src="assets/images/BraveGrumpyRectange_color_typed.png"> &trade; </p>
                 </div>
                 <div class="col-m-4 contact-me">
                     <div class="col-s-4"></div>
