ensuring all external links are to new tabs.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="col-s-4"></div>
                     <div class="col-s-4">
                         <p>
-                            <a href="https://discord.gg/ZfMntbk5U4"><img height="30em" alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
+                            <a href="https://discord.gg/ZfMntbk5U4" target="_blank"><img height="30em" alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
                         </p>
                     </div>
                     <div class="col-s-4"></div>
@@ -67,7 +67,7 @@
                     <div class="col-s-4"></div>
                     <div class="col-s-4">
                         <p>
-                            <a href="mailto:info@bravegrumpy.com"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
+                            <a href="mailto:info@bravegrumpy.com" target="_blank"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
                         </p>
                     </div>
                     <div class="col-s-4"></div>
