--- a/link-repository.html
+++ b/link-repository.html
@@ -53,22 +53,22 @@
                                 <div class="nav-list">
                                     <ul>
                                         <li>
-                                            <a href="https://pixelandpoly.com/ior.html">Pixel and Poly</a>
+                                            <a href="https://pixelandpoly.com/ior.html" target="_blank">Pixel and Poly</a>
                                         </li>
                                         <li>
-                                            <a href="https://forums.cgsociety.org/t/a-complete-ior-list/1070401">CGTalk</a>
+                                            <a href="https://forums.cgsociety.org/t/a-complete-ior-list/1070401" target="_blank">CGTalk</a>
                                         </li>
                                         <li>
-                                            <a href="https://en.wikipedia.org/wiki/List_of_refractive_indices">Wikipedia</a>
+                                            <a href="https://en.wikipedia.org/wiki/List_of_refractive_indices" target="_blank">Wikipedia</a>
                                         </li>
                                         <li>
-                                            <a href="http://blendersauce.com/ior-list/">Blendersauce</a>
+                                            <a href="http://blendersauce.com/ior-list/" target="_blank">Blendersauce</a>
                                         </li>
                                         <li>
-                                            <a href="https://refractiveindex.info/">RefractiveIndex.INFO</a>
+                                            <a href="https://refractiveindex.info/" target="_blank">RefractiveIndex.INFO</a>
                                         </li>
                                         <li>
-                                            <a href="http://hyperphysics.phy-astr.gsu.edu/hbase/hframe.html">Georgia State University</a>
+                                            <a href="http://hyperphysics.phy-astr.gsu.edu/hbase/hframe.html" target="_blank">Georgia State University</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -87,7 +87,7 @@
                     <div class="col-s-4"></div>
                     <div class="col-s-4">
                         <p>
-                            <a href="https://discord.gg/ZfMntbk5U4"><img height="30em" alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
+                            <a href="https://discord.gg/ZfMntbk5U4" target="_blank"><img height="30em" alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
                         </p>
                     </div>
                     <div class="col-s-4"></div>
@@ -96,7 +96,7 @@
                     <div class="col-s-4"></div>
                     <div class="col-s-4">
                         <p>
-                            <a href="mailto:info@bravegrumpy.com"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
+                            <a href="mailto:info@bravegrumpy.com" target="_blank"><img height="30em" src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png"></a>
                         </p>
                     </div>
                     <div class="col-s-4"></div>
