--- a/writing.html
+++ b/writing.html
@@ -48,7 +48,7 @@
                 <div class="section">
                     <h2>Welcome to Huetopia</h2>
                     <p>Huetopia is a world that i have been building for some time.</p>
-                    <p>This website is for chronicling my progress as I folow the <a href="https://www.coursera.org/learn/write-your-first-novel/home/info" target="_blank">Writing your First Novel</a> course.  It is taught by <a href="https://www.coursera.org/instructor/dwheeler" target="_blank">David Wheeler</a> and published by <a href="https://msu.edu/" target="_blank">Michigan State Universtity</a> on <a href="https://www.coursera.org">Coursera</a>. </p>
+                    <p>This website is for chronicling my progress as I folow the <a href="https://www.coursera.org/learn/write-your-first-novel/home/info" target="_blank">Writing your First Novel</a> course.  It is taught by <a href="https://www.coursera.org/instructor/dwheeler" target="_blank">David Wheeler</a> and published by <a href="https://msu.edu/" target="_blank">Michigan State Universtity</a> on <a href="https://www.coursera.org" target="_blank">Coursera</a>. </p>
                     <p>For week by week progress go to the <a href="work-by-week/index.html">Coursera Work By Week</a> page.</p>
                     <p>To read full chapters as they are written, go to <a href="content/chapters/index.html">Read Now</a></p>
                 </div>
@@ -66,18 +66,26 @@
         <div class="row">
             <div class="col-s-12 footer">
                 <div class="col-m-4 copyright">
-                    <p>Copyright &copy; <!--img src="assets/images/BraveGrumpyRectangle.svg"--> BraveGrumpy &trade; </p>
+                    <p>Copyright &copy; <img src="assets/images/BraveGrumpyRectange_color_typed.png" height="30em"> BraveGrumpy &trade; </p>
                 </div>
                 <div class="col-m-4 contact-me">
                     <div class="col-s-4"></div>
                     <div class="col-s-4">
                         <p>
-                            <a href=""><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a>
+                            <a href="#" target="_blank"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png" height="30em"></a>
                         </p>
                     </div>
                     <div class="col-s-4"></div>
                 </div>
-                <div class="col-m-4"></div>
+                <div class="col-m-4 email">
+                    <div class="col-s-4"></div>
+                    <div class="col-s-4">
+                        <p>
+                            <a href="mailto:info@bravegrumpy.com" target="_blank"><img src="https://fontmeme.com/permalink/231031/0c070e833e2d90b5effc2581b747e400.png" height="30em"></a>
+                        </p>
+                    </div>
+                    <div class="col-s-4"></div>
+                </div>
             </div>
         </div>
         <div class="row">
