Turning menu into navbar

--- a/index.html
+++ b/index.html
@@ -21,22 +21,21 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-s-3 col-m-3 menu">
-                <div class="nav-list">
+            <div class="col-s-12 col-m-12 navbar">
                     <ul>
-                        <li>
+                        <li class="active col-s-12 col-m-12 col-l-12 col-xl-12 navbar">
                             <a href="index.html" class="active">Brave Grumpy Homepage</a>
                         </li>
-                        <li>
+                        <li class="col-s-12 col-m-12 col-l-12 col-xl-12 navbar">
                             <a href="writing.html">Huetopia Homepage</a>
                         </li>
-                        <li>
+                        <!--li>
                             <a href="#">Art Portfolio</a>
-                        </li>
-                        <li>
+                        </li-->
+                        <li class="col-s-12 col-m-12 col-l-12 col-xl-12 navbar">
                             <a href="link-repository.html">Helpful Link Repository</a>
                         </li>
-                        <li>
+                        <li class="col-s-12 col-m-12 col-l-12 col-xl-12 navbar">
                             <a href="archive/index.html">Old, Experimental homepage</a>
                         </li>
                     </ul>
