--- a/link-repository.html
+++ b/link-repository.html
@@ -21,22 +21,21 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-s-3 col-m-3 menu">
-                <div class="nav-list">
+                <div class="col-s-12 col-m-12 col-l-12 col-xl-12 navbar">
                     <ul>
-                        <li>
+                        <li class="col-s-12 col-m-2 col-l-2 col-xl-2">
                             <a href="index.html">Brave Grumpy Homepage</a>
                         </li>
-                        <li>
+                        <li class="col-s-12 col-m-2 col-l-2 col-xl-2">
                             <a href="writing.html">Huetopia Homepage</a>
                         </li>
-                        <li>
+                        <!-- li>
                             <a href="#">Art Portfolio</a>
+                        </li-->
+                        <li class="col-s-12 col-m-2 col-l-2 col-xl-2">
+                            <a href="link-repository.html" class="active">Helpful Link Repository</a>
                         </li>
-                        <li>
-                            <a href="#" class="active">Helpful Link Repository</a>
-                        </li>
-                        <li>
+                        <li class="col-s-12 col-m-2 col-l-2 col-xl-2">
                             <a href="archive/index.html">Old, Experimental homepage</a>
                         </li>
                     </ul>
