fixing active styling for the navbar

--- a/link-repository.html
+++ b/link-repository.html
@@ -32,8 +32,8 @@
                         <!-- li>
                             <a href="#">Art Portfolio</a>
                         </li-->
-                        <li class="col-s-12 col-m-2 col-l-2 col-xl-2">
-                            <a href="link-repository.html" class="active">Helpful Link Repository</a>
+                        <li class="active col-s-12 col-m-2 col-l-2 col-xl-2">
+                            <a href="link-repository.html">Helpful Link Repository</a>
                         </li>
                         <li class="col-s-12 col-m-2 col-l-2 col-xl-2">
                             <a href="archive/index.html">Old, Experimental homepage</a>
