--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-s-12 col-m-12 navbar">
+                <div class="col-s-12 col-m-12 navbar">
                     <ul>
-                        <li class="active col-s-12 col-m-12 col-l-12 col-xl-12 navbar">
-                            <a href="index.html" class="active">Brave Grumpy Homepage</a>
+                        <li class="active col-s-12 col-m-12 col-l-12 col-xl-12">
+                            <a href="index.html">Brave Grumpy Homepage</a>
                         </li>
                         <li class="col-s-12 col-m-12 col-l-12 col-xl-12 navbar">
                             <a href="writing.html">Huetopia Homepage</a>
@@ -47,7 +47,6 @@
                     <p>This is the home page. The links to the left exist as a combination of all links on the page, and so that I can expand beyond just the Hutopia part of this site.</p>
                 </div>
             </div>
-        </div>
         <div class="row">
             <div class="col-s-12 footer">
                 <div class="col-m-4 copyright">
